--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#" id="popular">Popular</a>
+              <a class="nav-link" aria-current="page" href="#" id="popular">Populer</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#" id="upcoming">Upcoming</a>
