--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap style CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" /> -->
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/img/logojumbo.png" />
     <title>Gudang Movie</title>
@@ -44,10 +44,10 @@
     <!-- end navbar -->
 
     <!-- jumbotron -->
-    <div class="jumbotron pt-5" style="background-color: #30475e; border-radius: 0%; margin-bottom: 0%">
-      <div class="container pt-5 pb-3">
-        <div class="row justify-content-center">
-          <div class="col-md-6 pt-lg-5">
+    <section class="jumbotron pt-5" style="background-color: #30475e; border-radius: 0%; margin-bottom: 0%">
+      <div class="container pt-5">
+        <div class="row justify-content-center pb-5">
+          <div class="col-md-5 pt-lg-5">
             <h1 class="fw-bold animate__slideInRight" style="color: #f05454; font-size: 50px">Welcome.</h1>
             <p class="lead fw-bold lh-sm" style="color: #dddddd">Millions of movies info and people to discover. <br /><span style="font-size: x-large; color: #f05454">Explore now.</span></p></p>
             <!-- search input -->
@@ -62,7 +62,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <!-- End jumbotron -->
 
     <!-- Main -->
@@ -101,7 +101,6 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script src="/js/script.js"></script>
   </body>
 </html>
